# consensual

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.c
include/consensual/: bytes.h  runtime.h  storage.h
src/: bytes.c  runtime.c  storage.c
tests/: alloc.c  alloc.h  bytes_tests.c  main.c  runtime_tests.c  storage_tests.c
